Scrollbar techniques, as well as backround image fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,56 @@
-/* developer styles go here */
+h2 {
+    padding: 1rem;
+}
+
+.parallax-image h2 {
+    color: white;
+}
+
+.horizontal-scroll {
+    display: flex;
+    overflow: scroll;
+    /* This only works for fire fox */
+    scrollbar-width: none;
+    height: calc(205.7px + 2rem);
+    align-items: center;
+}
+
+.horizontal-scroll::-webkit-scrollbar {
+    background: transparent;
+}
+
+.horizontal-scroll>div {
+    flex: 0 0 330px;
+    height: 187px;
+    background-color: lightgreen;
+    border-radius: 3px;
+    margin: 1rem 0.5rem;
+    transition: all .3s ease;
+}
+
+.horizontal-scroll>div:hover,
+.horizontal-scroll>div:active {
+    flex: 0 0 346.5px;
+    height: 205px;
+}
+
+.parallax-image {
+    background-image: url(../img/movie.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    height: 400px;
+    background-attachment: fixed;
+}
+
+@media screen and (min-width:1024px) {
+    .horizontal-scroll {
+        scrollbar-width: unset;
+    }
+
+    .horizontal-scroll::-webkit-scrollbar {
+        background-color: lightgrey;
+        width: 20px;
+        height: 10px;
+    }
+}
